<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:padding="8dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/AppName"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/AppMainDescription"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        app:cardCornerRadius="16dp"
        app:contentPadding="12dp"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Username Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="16sp" />

            <!-- Password Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="16sp" />

            <!-- Login Button -->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_blue_dark"
                android:shadowRadius="23"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />

            <!-- Status Text -->
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/DefaultLoginMessage"
                android:textColor="@android:color/darker_gray"
                android:textSize="10sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>